Added filter by team to show drivers function.